@startuml RAT

entity "semester" {
  *idSemester : INT Identity <<PK>>
  --
  tahunAjaran : VARCHAR(50) not null
}

entity "Keryawan" {
  *idKaryawan : INT <<PK>>
  --
  namaKaryawan : VARCHAR(100) not null
}

entity "gedung" {
  *idGedung : INT <<PK>>
  --
  namaGedung : VARCHAR(100) not null
}

entity "ruangan" {
  *idRuangan : INT <<PK>>
  --
  idGedung : INT <<FK>> not null
  namaRuangan : VARCHAR(100) not null
}

entity "Barang" {
  *idBarang : INT <<PK>>
  --
  namaBarang : VARCHAR(100)
  stok : INT not null
  tipeBarang : VARCHAR(50) not null
}

entity "users" {
  *idUser : INT <<PK>>
  --
  email : VARCHAR(50) unique 
  password : VARCHAR(255) not null
}

entity "detailBarang" {
  *idDetailBarang : INT <<PK>>
  --
  idBarang : INT <<FK>>
  idRuangan : INT <<FK>>
  spesifikasi : VARCHAR(500) null
}

entity "PermintaanBarang" {
  *idPermintaanBarang : INT <<PK>>
  --
  idBarang : INT <<FK>> not null
  idRuangan : INT <<FK>> not null
  namaPeminta : VARCHAR(100)
  jumlah : INT not null check (jumlah > 0)
  tglPermintaan: DATE default
  idSemester : INT <<FK>> not null
}


entity "Maintenance" {
  *idMaintenance : INT <<PK>>
  --
  idKaryawan : INT <<FK>> not null
  idDetailBarang : INT <<FK>> not null
  tglCek : DATE DEFAULT
  kondisi : BIT not null
  kerusakan : VARCHAR(100)
  tindakLanjut : VARCHAR(100)
  idSemester : INT <<FK>> not null
}

' Setiap detail barang wajib punya 1 Barang
Barang ||--o{ detailBarang : "memiliki"

' Setiap ruangan wajib ada di 1 gedung (Mandatory One)
gedung ||--o{ ruangan : "memiliki"

' satu detail barang bisa di banyak ruangan dan satu ruangan bisa menyimpan banyak/nol detail barang 
ruangan }o--o{ detailBarang : "menyimpan"

' 1 unit bisa berkali-kali dipinjam/dirawat)
detailBarang ||--o{ PermintaanBarang : "diminta"
detailBarang ||--o{ Maintenance : "dirawat"

' minimal 1 karyawan untuk bisa melakukan maintenance
Keryawan ||--o{ Maintenance : "melakukan"


semester ||--o{ PermintaanBarang : "berlaku untuk"
semester ||--o{ Maintenance : "berlaku untuk"

@enduml